--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>BonusService</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <properties>
+            <maven.compiler.sourse>11</maven.compiler.sourse>
+            <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
 </project>
